<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhotoSelect</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
	<string name="elapse">时光</string>
	<string name="confirm">确定</string>
	<string name="next_step">下一步</string>
	<string name="back">返回</string>
	<string name="cancel">取消</string>
	<string name="delete">删除</string>
</resources>