<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:background="@drawable/btn_back_bg"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/album"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <GridView
        android:id="@+id/gd_photoes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:listSelector="@drawable/grid_selector"
        android:numColumns="3" >
    </GridView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top"
        android:gravity="center"
        android:padding="5dp" >

        <Button
            android:id="@+id/btn_preview"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:text="@string/preview"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </RelativeLayout>

</LinearLayout>