<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/main_bg"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top_bg_color"
        android:padding="8dp" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="center"
            android:text="@string/album"
            android:textColor="@color/top_text_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/elapse"
            android:textColor="@color/top_text_color"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/top_text_color"
            android:textSize="12sp" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/grey"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/top"
        android:background="@color/divider" >
    </FrameLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/grey" />

    <com.viewpagerindicator.CirclePageIndicator
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/grey"
    	android:padding="10dip"
        app:centered="true"
        app:fillColor="#FF000000"
        app:pageColor="#ffc2c2c2"
        app:radius="4dp"
         >
    </com.viewpagerindicator.CirclePageIndicator>

</RelativeLayout>